--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <meta name="og:site_name" content="GDG Monrovia"/>
     <meta name="og:description" content="Google Developers Group Monrovia is an initiative to concentrate the efforts of many developers in and around Monrvia & Liberia as a whole to learn, share and get productive using the various Google products."/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84991751-1"></script> -->
-    <!-- <script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84991751-1"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
